2003-11-22  Alexander Malysh  <a.malysh@centrium.de>
    * configure, configure.in, gw-config.h.in, gwlib/log.c: added backtrace
      support for supported archs to gw_panic call. Backtrace information allows
      better way to trace a panic cause because now panic give us really meaningless
      info. Tip: use address within [] with add2line.

2003-11-21  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/bb_smscconn.c: adding logging of msg->sms.binfo field to access-log.

2003-11-21  Stipe Tolj  <tolj@wapme-systems.de>
    * wap/wtp_resp_states.def: fixing PANIC output in case object is larger
      then maximum SAR limit of 256 packets.
      Thanks to "Vjacheslav Chekushin" <slava@lmt.lv> for providing patch.
      [Msg-ID: <3FBDC5BF.2000702@lmt.lv>]

2003-11-20 Aarno Syvanen <as@gni.ch>
    * gw/wap_push_pap_mime.c: Fixed parsing. Now there must be empty
      line between headers and message.
    * gw/wap_push_pap_mime.c: Fixed memory leaks. And bug reported by
      Paul.

2003-11-20  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: fixing typo

2003-11-19  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml, gw/bearerbox.c, gwlib/cfg.def: changed 
      config directive 'sms-incoming-queue-length' to 'sms-incoming-queue-limit'
      for the sake of semantics.

2003-11-15  Stipe Tolj  <tolj@wapme-systems.de>
    * LICENSE: changed to Kannel Software License v1.0. BSD-style as before
      with some more restrictions to the name "Kannel" and usage of it.
      Changed in consensus with all other Kannel developers and members of
      the Kannel group.
    * COPYING: removed "old" license text and add reference to LICENSE file.
    * README: intent line fix.
    * configure[.in]: added license information notice in end of output to 
      inform the user that he/she is bound to the license agreement terms
      when proceeding with instllation.
    * utils/update-license.sh: added simple shell script to prefix the source